kubernetes/apps/default/tubearchivist/redis-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tubearchivist-redis
  namespace: default
spec:
  hosts:
    - "*"
  tcp:
    - route:
        - destination:
            host: tubearchivist-redis
            port:
              number: 6379
    - match:
        - port: 6379
